# omni-letter-shell

./: CMakeLists.txt  README.md
include/: shell.h  shell_cfg.h
linker/gcc/: letter_shell_commands.ld
src/: shell.c
